--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-plugin-url-copy",
   "type": "module",
   "version": "1.0.1",
-  "packageManager": "pnpm@8.12.0",
+  "packageManager": "pnpm@8.12.1",
   "description": "Auto copy the vite server url when dev or preview",
   "author": "XioDone",
   "license": "MIT",
@@ -44,16 +44,19 @@
   "peerDependencies": {
     "vite": ">=4.0.0"
   },
-  "devDependencies": {
-    "@antfu/eslint-config": "^2.4.3",
-    "@types/node": "^20.10.4",
-    "bumpp": "^9.2.0",
+  "dependencies": {
     "clipboardy": "^4.0.0",
     "consola": "^3.2.3",
+    "uqr": "^0.1.2"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^2.4.5",
+    "@types/node": "^20.10.4",
+    "bumpp": "^9.2.1",
     "eslint": "^8.55.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
-    "vite": "^5.0.7"
+    "vite": "^5.0.9"
   }
 }
