--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "keywords": [
     "vite-plugin",
+    "vite plugin",
+    "QR Code",
+    "QRCode",
     "copy server url"
   ],
   "exports": {
@@ -50,13 +53,13 @@
     "uqr": "^0.1.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.4.5",
-    "@types/node": "^20.10.4",
+    "@antfu/eslint-config": "^2.4.6",
+    "@types/node": "^20.10.5",
     "bumpp": "^9.2.1",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
-    "vite": "^5.0.9"
+    "vite": "^5.0.10"
   }
 }
