--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "vite-plugin-url-copy",
   "type": "module",
   "version": "1.1.0",
-  "packageManager": "pnpm@8.12.1",
-  "description": "Auto copy the vite server url when dev or preview",
+  "packageManager": "pnpm@8.13.1",
+  "description": "Auto copy the Vite server URL and generate a QR code for easy access during dev or preview",
   "author": "XioDone",
   "license": "MIT",
   "homepage": "https://github.com/XioDone/vite-plugin-url-copy#readme",
@@ -53,7 +53,7 @@
     "uqr": "^0.1.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.4.6",
+    "@antfu/eslint-config": "^2.6.0",
     "@types/node": "^20.10.5",
     "bumpp": "^9.2.1",
     "eslint": "^8.56.0",
