--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "demo": "pnpm -C example run dev",
     "release": "bumpp && npm publish",
     "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "postinstall": "npx simple-git-hooks",
     "c": "rm pnpm-lock.yaml package-lock.json & rm -rf node_modules dist example/node_modules"
   },
   "peerDependencies": {
@@ -53,13 +55,21 @@
     "uqr": "^0.1.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.3",
-    "@types/node": "^20.11.15",
+    "@antfu/eslint-config": "^2.6.4",
+    "@types/node": "^20.11.16",
     "bumpp": "^9.3.0",
     "eslint": "^8.56.0",
+    "lint-staged": "^15.2.1",
+    "simple-git-hooks": "^2.9.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
     "vite": "^5.0.12"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
