--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-plugin-url-copy",
   "type": "module",
   "version": "1.1.4",
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.5.0",
   "description": "Auto copy the Vite server URL and generate a QR code for easy access during dev or preview",
   "author": "XioDone",
   "license": "MIT",
@@ -44,6 +44,7 @@
     "release": "bumpp && npm publish",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "up": "bunx taze latest -I",
     "c": "rm pnpm-lock.yaml package-lock.json & rm -rf node_modules dist example/node_modules"
   },
   "peerDependencies": {
@@ -55,8 +56,9 @@
     "uqr": "^0.1.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.2",
-    "@types/node": "^20.14.9",
+    "@antfu/eslint-config": "^2.22.0",
+    "@types/node": "^20.14.10",
+    "@xiodone/eslint-config": "^1.0.0",
     "bumpp": "^9.4.1",
     "eslint": "^9.6.0",
     "lint-staged": "^15.2.7",
