--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-plugin-url-copy",
   "type": "module",
   "version": "1.1.4",
-  "packageManager": "pnpm@9.5.0",
+  "packageManager": "pnpm@9.6.0",
   "description": "Auto copy the Vite server URL and generate a QR code for easy access during dev or preview",
   "author": "XioDone",
   "license": "MIT",
@@ -45,7 +45,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "up": "bunx taze latest -I",
-    "c": "rm pnpm-lock.yaml package-lock.json & rm -rf node_modules dist example/node_modules"
+    "c": "rm -rf node_modules dist example/node_modules pnpm-lock.yaml package-lock.json"
   },
   "peerDependencies": {
     "vite": ">=4.0.0"
@@ -56,15 +56,15 @@
     "uqr": "^0.1.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.23.0",
-    "@types/node": "^20.14.11",
+    "@antfu/eslint-config": "^2.23.2",
+    "@types/node": "^20.14.12",
     "@xiodone/eslint-config": "^1.0.1",
     "bumpp": "^9.4.1",
     "eslint": "^9.7.0",
     "lint-staged": "^15.2.7",
     "simple-git-hooks": "^2.11.1",
-    "tsup": "^8.1.2",
-    "typescript": "^5.5.3",
+    "tsup": "^8.2.3",
+    "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "vite": "^5.3.4"
   },
